  the research provided via https://arxiv.org/abs/2307.16779. (Sean MacAvaney, Ben Trent).

* GITHUB#13974: Introducing DocValuesMultiRangeQuery.SortedSetStabbingBuilder into sandbox. (Mikhail Khludnev)

* GITHUB#14204: Added HistogramCollectorManager to efficiently compute a
  histogram of the distribution of the values of a field, for documents
  matching a given query. (Adrien Grand)

Improvements
---------------------

* GITHUB#14079: Hunspell Dictionary now supports an option to tolerate REP rule count mismatches.
  (Robert Muir)
* GITHUB#13984: Add HNSW graph checks and stats to CheckIndex

* GITHUB#14113: Remove unnecessary ByteArrayDataInput allocations from `Lucene90DocValuesProducer$TermsDict.decompressBlock`. (Ankit Jain)

* GITHUB#14138: Implement IntersectVisitor#visit(IntsRef) in  many of the current implementations and add
  BulkAdder#add(IntsRef) method. They should provide better performance due to less virtual method calls and
  more efficient bulk processing. (Ignacio Vera)

* GITHUB#14107, GITHUB#14124, GITHUB#14103: Optimize DirectIOIndexInput; add
  individual and bulk data retrieval overloads; avoid double buffering with
  slices. (Chris Hegarty)

* GITHUB#14166: Log(ByteSize|Doc)MergePolicy now allow merging more than
  mergeFactor segments together when the merge is below the min merge size.
  (Adrien Grand)

* GITHUB#14154: Add UnwrappingReuseStrategy for AnalyzerWrapper that consults
  the wrapped analyzer's strategy to decide if components can be reused or need
  to be updated. (Mayya Sharipova)

* GITHUB#14192: Added support for RegExp to handle case insensitive matching
  across the full set of Unicode characters. (John Wagster)

* GITHUB#14239: Hunspell's option to tolerate affix rule count mismatches was
  improved to tolerate more instances of this problem.  (Robert Muir)


* GITHUB#14238: Improve test coverage of Dynamic Range Faceting. (John Houser)
